fix margin and overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,8 +15,11 @@ html, body {
     background-color: #fff;
     font-size: 26px;
     font-family:"Akzidenz-Grotesk Pro", serif;
-    overflow-x: hidden;
-    width: calc(100% + 8px);
+}
+body {
+  overflow-x: hidden;
+  width: calc(100% );
+  min-width: 100vw;
 }
 
 ::-webkit-scrollbar {
@@ -28,6 +31,8 @@ html, body {
 #app {
     transition: all 1s ease-in-out;
     opacity: 1;
+   
+    margin: 0;
 
   &.hide {
     opacity: 0;
