--- a/src/scss/works.scss
+++ b/src/scss/works.scss
@@ -53,6 +53,8 @@
 
   .works-content {
     padding-left: 18vw;
+    display: flex;
+    flex-direction: column;
     
     @media (max-width: 768px) {
       padding-left: 0;
